Increase the size of the home icon and fix alignment.

--- a/client/app/thermo/components/heating-status/heating-status.component.scss
+++ b/client/app/thermo/components/heating-status/heating-status.component.scss
@@ -183,9 +183,9 @@
 	color: $gray;
 }
 .thermo-inside--icon {
-	font-size: 2.5rem;
+	font-size: 2.8rem;
 	margin-top: 8px;
-	margin-bottom: 10px;
+	margin-bottom: 6px;
 }
 .thermo-outside--weather {
 	font-size: 3.1rem;
